--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://uilight.netlify.app/main.css">
 </head>
 <body>
+    <div class="d-flex wrap gap" id="product"></div>
     <div class="card card-vertical d-flex direction-column relative shadow">
         <div class="card-image-container">
              <img class="card-image" src="https://uilight.netlify.app/assets/shoes.jpg" alt="shoes">
