added icons in nav bar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 
 </head>
 <body>
+     <header class="heading d-flex grow-shrink-basis align-center">
+          <div class="heading-title-icon d-flex grow-shrink-basis align-center">
+              <img class="icon mr-1" src="assets/flag-of-uk.png" alt="lightbul">
+              <h1 class="heading-title">
+                  <a class="link" href="/">British Imperial</a>
+              </h1>
+          </div>
+          <nav class="navigation">
+              <ul class="list-non-bullet">
+
+                  <li class="list-item-inline">
+                    <a href="/" class="link cursor">
+                      <span class="material-icons-outlined">favorite_border</span>
+                    </a>
+                  </li>
+                  
+                  <li class="list-item-inline">
+                      <a href="/" class="link cursor">
+                         <span class="material-icons-outlined">shopping_cart</span>
+                      </a>
+                  </li>
+
+              </ul>
+          </nav>
+      </header>
     <div class="d-flex wrap gap" id="product"></div>
    <script type="module" src="index.js"></script>
 </body>
