--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </ul>
           </nav>
       </header>
-    <div class="d-flex wrap gap" id="product"></div>
+    <div class="d-flex wrap gap margin" id="product"></div>
    <script type="module" src="index.js"></script>
 </body>
 </html>
