--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
               </h1>
           </div>
           <nav class="navigation">
+               <div class="search-bar d-flex align-center">
+                    <input type="text" class="search-box-input" placeholder="Search for products...">
+                    <button class="btn btn-primary">
+                         <i class="fa fa-search"></i>
+                       </button>
+                </div>
               <ul class="list-non-bullet">
-
-                  <li class="list-item-inline">
+                       <li class="list-item-inline">
                     <a href="/" class="link cursor">
                       <span class="material-icons-outlined">favorite_border</span>
                     </a>
