add to cart and remove from cart

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
                   </li>
                   
                   <li class="list-item-inline">
-                      <a href="/" class="link cursor">
+                      <a href="/cart.html" class="link cursor">
                          <span class="material-icons-outlined">shopping_cart</span>
                       </a>
                   </li>
-
               </ul>
           </nav>
       </header>
